# ip_cpp_hw1

./: CMakeLists.txt  Makefile  README.md
include/string_holder/: string_holder.hpp
libsrc/string_holder/: CMakeLists.txt
libsrc/string_holder/src/: string_holder.cpp
projects/app/: CMakeLists.txt
projects/app/src/: app.cpp
testsuite/libsrc/string_holder/: CMakeLists.txt
testsuite/libsrc/string_holder/src/: unit_tests.cpp
testsuite/projects/app/: integrate.py
